# cs-framework

./: README.md  check.py  main.c  run.sh
submissions/: README.md
submissions/c_submission/: CMakeLists.txt  Makefile  source_file.c
submissions/cpp_submission/: CMakeLists.txt  Makefile  build_dependancies.sh  requirements.txt  source_file.cpp
submissions/java_submission/: Makefile  source_file.java
submissions/python_submission/: Makefile  source_file.py
submissions/python_submission/output/: mem.txt  time.txt
